--- a/Changelog
+++ b/Changelog
@@ -6,19 +6,27 @@
 • Tampilan baru
 • Base apps NontonTV/TV Show by Harimurti
 
-• WA : 082246543995
-• FB : Albas Alka CieMeonx
-• YT : ALBAS ALKA
-• TELE : https://t.me/albas_alka
 
-• ALKA TV Mod by ALBAS ALKA
 
-• Aplikasi ALKA IPTV dan ALKA TV tidak untuk di perjual belikan, Jika anda ingin ADMIN tetap semangat dalam mengelola aplikasi ini, bantu dengan melakukan donasi Seikhlasnya saja.
+• Aplikasi ALKA IPTV dan ALKA TV tidak untuk di perjual belikan.
+• Jika anda ingin SAYA tetap semangat dalam mengelola aplikasi ini,
+  bantu dengan melakukan donasi Seikhlasnya saja.
 • Untuk berdonasi, silahkan hubungi kontak menu di bawah.
-• Aplikasi kami hanya menampilkan tautan ke konten audiovisual yang terletak di server pihak ketiga dan di sediakan atau di kirimkan oleh pihak ketiga.
-• Kami TIDAK menghosting atau mentransmisikan konten audiovisual apapun itu sendiri, dan TIDAK mengontrol atau mempengaruhi konten tersebut.
+• Aplikasi kami hanya menampilkan tautan ke konten audiovisual
+  yang terletak di server pihak ketiga dan di sediakan atau di kirimkan oleh pihak ketiga.
+• Kami TIDAK menghosting atau mentransmisikan konten audiovisual apapun itu sendiri,
+  dan TIDAK mengontrol atau mempengaruhi konten tersebut.
 • Kami tidak dapat menerima tanggung jawab apapun atas konten yang dikirimkan oleh pihak ketiga.
 • Tanggung jawab apapun atas konten ini terletak pada mereka yang menghosting atau yang mengirimkannya.
 • Kami tidak berafiliasi atau meng-klaim berafiliasi dengan salah satu pemilik aliran dan/atau video.
-• Semua konten adalah hak cipta yang dilindungi dari pemiliknya masing-masing. Dan Channel/Saluran yang ada di dalam aplikasi ini bisa bertambah ataupun berkurang sewaktu-waktu.
+• Semua konten adalah hak cipta yang dilindungi dari pemiliknya masing-masing.
+• Dan Channel/Saluran yang ada di dalam aplikasi ini bisa bertambah ataupun berkurang sewaktu-waktu.
 
+
+
+• WA : 082246543995
+• FB : Albas Alka CieMeonx
+• YT : ALBAS ALKA
+• TELE : @albas_alka
+
+• ALKA TV Mod by ALBAS ALKA
